Updated the CategorySliderForChannel_V1 to use SimpleDraweeView instead of Picasso

--- a/corelibrary/src/main/res/values/colors.xml
+++ b/corelibrary/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="text_color">#484b4d</color>
     <color name="btn_color">#69cac7</color>
 
+    <color name="transparent">#00000000</color>
+
 </resources>
