Login Screen adding progress dialog

--- a/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication_tv.xml
+++ b/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication_tv.xml
@@ -586,4 +586,19 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/loadingPanelProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="#F00886"
+            android:indeterminate="true" />
+
+    </RelativeLayout>
 </FrameLayout>
