--- a/corelibrary/src/main/res/layout/slider_render_channel.xml
+++ b/corelibrary/src/main/res/layout/slider_render_channel.xml
@@ -88,6 +88,15 @@
             />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/lockButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
