--- a/corelibrary/src/main/res/layout/episodes_list_without_play_button_item_view_v1.xml
+++ b/corelibrary/src/main/res/layout/episodes_list_without_play_button_item_view_v1.xml
@@ -25,7 +25,7 @@
             android:layout_height="46dp"
             android:layout_marginRight="6dp"
             android:layout_toRightOf="@id/moreInfoImageView"
-            android:background="#000000"
+            android:background="#00000000"
             android:visibility="visible"
             android:layout_centerVertical="true"/>
         <!--android:src="@drawable/placeholder4"-->
@@ -150,7 +150,7 @@
                 android:layout_height="46dp"
                 android:layout_marginRight="6dp"
                 android:layout_alignParentLeft="true"
-                android:background="#ffffff"
+                android:background="#00ffffff"
                 android:visibility="gone"
                 android:layout_centerVertical="true"/>
             <!--android:src="@drawable/placeholder4"-->
