updated episodes list (episodes_list_without_play_button_item_view_v1) to not show the black background for thumbnails

--- a/corelibrary/src/main/res/layout/slider_render_channel.xml
+++ b/corelibrary/src/main/res/layout/slider_render_channel.xml
@@ -133,7 +133,6 @@
             android:id="@+id/channelLogoImageView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            fresco:placeholderImage="@drawable/placeholder4_black"
             android:layout_gravity="center"
             android:layout_centerInParent="true"
             fresco:actualImageScaleType="fitCenter"
@@ -142,6 +141,7 @@
             android:padding="10dp"
             android:visibility="visible"
             />
+        <!--fresco:placeholderImage="@drawable/placeholder4_black"-->
         <!--android:background="@drawable/channel_logo_background"-->
         <TextView
             android:id="@+id/channelTitleTV"
