Revry Login BG added for testing client issue

--- a/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication_tv.xml
+++ b/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication_tv.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/revry_login_bg"
     android:id="@+id/login_root_view"
-    tools:context="com.dotstudioz.dotstudioPRO.corelibrary.userauthenticationfragment.FragmentUserAuthentication">
+    tools:context="com.dotstudioz.dotstudioPRO.corelibrary.userauthenticationfragment.FragmentUserAuthenticationForTV">
 
     <LinearLayout
         android:layout_width="match_parent"
