updated the login with facebook icon in fragment_user_authentication_tv.xml cleaned and updated the library

--- a/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication_tv.xml
+++ b/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication_tv.xml
@@ -472,8 +472,7 @@
                         android:layout_width="30dip"
                         android:layout_height="31dp"
                         android:scaleType="fitXY"
-                        android:visibility="gone"
-                        android:src="@drawable/facebook_icon" />
+                        android:visibility="gone"/>
 
                     <Button
                         android:id="@+id/facebookButton"
