--- a/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication.xml
+++ b/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication.xml
@@ -124,7 +124,7 @@
         <Button
             android:id="@+id/facebookButton"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:nextFocusUp="@+id/submitButton"
@@ -134,7 +134,7 @@
             android:selectAllOnFocus="true"
             android:textAllCaps="false"
             android:background="@drawable/login_with_facebook"
-            android:text="Log in with Facebook"
+            android:text=""
             android:layout_marginBottom="5dp"/>
 
 
