--- a/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication.xml
+++ b/corelibrary/src/main/res/layout/FragmentUserAuthentication/layout/fragment_user_authentication.xml
@@ -121,7 +121,7 @@
                 android:textSize="11sp" />
 
         </LinearLayout>-->
-        <Button
+        <!--<Button
             android:id="@+id/facebookButton"
             android:layout_width="200dp"
             android:layout_height="44dp"
@@ -135,7 +135,42 @@
             android:textAllCaps="false"
             android:background="@drawable/login_with_facebook"
             android:text=""
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"/>-->
+        <LinearLayout
+            android:id="@+id/facebook_container"
+            android:layout_width="230dp"
+            android:layout_height="33dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/login_with_facebook_1"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:nextFocusDown="@+id/skipButton"
+            android:nextFocusLeft="@+id/submitButton"
+            android:nextFocusRight="@+id/skipButton"
+            android:nextFocusUp="@+id/submitButton"
+            android:orientation="horizontal"
+            android:selectAllOnFocus="true">
+
+            <ImageView
+                android:layout_width="30dip"
+                android:layout_height="31dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:src="@drawable/facebook_icon" />
+
+            <Button
+                android:id="@+id/facebookButton"
+                android:layout_width="200dp"
+                android:layout_height="31dp"
+                android:background="@null"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="Sign In with Facebook"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp" />
+
+        </LinearLayout>
 
 
         <Button
