--- a/corelibrary/src/main/res/layout/categories_two_column.xml
+++ b/corelibrary/src/main/res/layout/categories_two_column.xml
@@ -33,6 +33,7 @@
                 android:id="@+id/iv1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:src="#cccccc"
                 android:clickable="true"/>
 
             <TextView
