--- a/corelibrary/src/main/res/layout/categories_two_column.xml
+++ b/corelibrary/src/main/res/layout/categories_two_column.xml
@@ -29,11 +29,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <View
+                android:id="@+id/placeHolder1View"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#cccccc"/>
+
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/iv1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="#cccccc"
                 android:clickable="true"/>
 
             <TextView
@@ -58,6 +63,12 @@
                 android:layout_centerInParent="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <View
+                android:id="@+id/placeHolder2View"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#cccccc"/>
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/iv2"
