--- a/corelibrary/src/main/res/layout/categories_two_column.xml
+++ b/corelibrary/src/main/res/layout/categories_two_column.xml
@@ -33,7 +33,8 @@
                 android:id="@+id/placeHolder1View"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#cccccc"/>
+                android:layout_margin="10dp"
+                android:background="#CCCCCC"/>
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/iv1"
@@ -68,7 +69,8 @@
                 android:id="@+id/placeHolder2View"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#cccccc"/>
+                android:layout_margin="10dp"
+                android:background="#CCCCCC"/>
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/iv2"
